--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@ ul{
     list-style: none;
 }
 
+a{
+    text-decoration: none;
+    color: inherit;
+}
 .main-title{
     font-weight: bold;
     text-align: center;
