--- a/src/styles/components/bill.css
+++ b/src/styles/components/bill.css
@@ -1,7 +1,9 @@
 .bill-component {
     display: flex;
+    justify-content: center;
     position: relative;
     padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .bill-component::before {
@@ -82,7 +84,7 @@
     }
     .bill-component .bill-info {
         flex: 0 0 100%;
-        padding-left: 0;
+        padding: 0 32px;
     }
     .bill-component .bill-img{
         text-align: center;
@@ -110,9 +112,6 @@
 }
 
 @media (min-width:900px) {
-    .bill-component .bill-info {
-        flex: 0 0 70%;
-    }
     .bill-component .bill-details{
         flex-direction: column;
     }
