Add some functionalities for login, secure routing and add functiolaities for transfer money

--- a/src/styles/pages/billsPage.css
+++ b/src/styles/pages/billsPage.css
@@ -73,6 +73,15 @@
     border-radius: 8px;
 }
 
+.bills-page .bill-container .no-bills {
+    text-align: center;
+}
+
+.bills-page .bill-container .no-bills img{
+    opacity: .3;
+    max-width: 100%;
+}
+
 @media (max-width:599px) {
 
 }
