--- a/src/styles/pages/billPage.css
+++ b/src/styles/pages/billPage.css
@@ -7,6 +7,15 @@
     padding: 30px;
     font-size: 18px;
     font-weight: 500;
+    position: relative;
+}
+
+.bill .bg-logo{
+    position: absolute;
+    top:0;
+    right: 0;
+    z-index: -1;
+    opacity: .5
 }
 
 .bill .bill-desc {
@@ -80,12 +89,17 @@
     background-color: var(--mainColor);
 }
 
-.bill .pay-btn {
+.bill .pay-btn ,
+.bill .dis-pay-btn {
     background-color: var(--mainColor);
     width: 100%;
     padding: 5px;
     font-size: 20px;
     font-weight: bold;
+}
+
+.bill .dis-pay-btn{
+    background-color: #E0E0E0;
 }
 
 @media (max-width:599px) {
