--- a/src/styles/pages/homePage.css
+++ b/src/styles/pages/homePage.css
@@ -61,6 +61,7 @@
 .home .transfers-container{
     height:  64vh;
     overflow-y: scroll;
+    padding-top: 5px;
 }
 
 .home .bills-container::-webkit-scrollbar ,
@@ -81,8 +82,12 @@
     padding-bottom: 10px;
     margin-bottom: 25px;
     cursor: pointer;
+    transition: .3s;
 }
 
+.home .bills-container .bill-item{
+    padding-top: 5px;
+}
 .home .transfers-container .transfer-item {
     align-items: center;
 }
@@ -97,6 +102,17 @@
     width: 90%;
     height: 1px;
     background-color: #777;
+    transition: .3s;
+}
+
+.home .bills-container .bill-item:hover,
+.home .transfers-container .transfer-item:hover{
+    transform: translateY(-5px);
+}
+
+.home .bills-container .bill-item:hover::before,
+.home .transfers-container .transfer-item:hover::before{
+    background-color: var(--mainColor);
 }
 
 .home .bills-container .bill-item .bill-img,
