--- a/src/styles/components/bill.css
+++ b/src/styles/components/bill.css
@@ -81,6 +81,7 @@
 @media (max-width:599px) {
     .bill-component{
         flex-direction: column;
+        margin-bottom: 35px;
     }
     .bill-component .bill-info {
         flex: 0 0 100%;
